feat: add gateway route publishing
